--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Chatty</title>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
 <body>
     <div id="react-root"></div>
